--- a/porto/tampomas.html
+++ b/porto/tampomas.html
@@ -99,7 +99,6 @@
     <span class="visually-hidden">Next</span>
   </button>
   </div>
-  <p class="text-center">Keterangan: Klik tombol kanan/kiri untuk ke gambar selanjutnya/sebelumnya</p>
 
   <!-- showcase admin -->
    <hr class="my-5 container">
@@ -138,10 +137,9 @@
     <span class="visually-hidden">Next</span>
   </button>
   </div>
-  <p class="text-center mb-5">Keterangan: Klik tombol kanan/kiri untuk ke gambar selanjutnya/sebelumnya</p>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
+  <footer class="bg-dark text-white text-center py-3 mt-5">
     <p class="mb-0">&copy; 2025 Raihan Taufiqurrahman. All rights reserved.</p>
   </footer>
 
@@ -149,3 +147,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
