--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
       <!-- Project Card 1 -->
       <div class="col-md-6 col-lg-4">
         <div class="card h-100 shadow-sm">
-          <img src="porto/img_game/Screenshot (233).png" class="card-img-top" alt="Puzzle Adventure Game">
+          <img src="porto/img_game/Screenshot (233).png" class="card-img-top" alt="Game">
           <div class="card-body text-center d-flex flex-column">
             <h5 class="card-title"> Game Edukasi Berpikir Komputasional</h5>
-            <p class="card-text"> Game edukasi yang didesain agar pemain menyelesaikan permasalahan menggunakan prinsip berpikir komputasional. Target pemain dari game ini adalah siswa SMP/Sederajat. Game dapat dijalankan di Windows dan Android.</p>
+            <p class="card-text"> Game edukasi yang didesain agar pemain menyelesaikan permasalahan menggunakan prinsip berpikir komputasional. Target pengguna adalah siswa SMP/Sederajat. Game dapat dijalankan di Windows dan Android.</p>
             <a href="porto/game.html" class="btn btn-outline-primary mt-auto">Lihat Detail</a>
           </div>
         </div>
@@ -72,7 +72,7 @@
       <!-- Project Card 2 -->
       <div class="col-md-6 col-lg-4">
         <div class="card h-100 shadow-sm">
-          <img src="porto/img_tampomas/Screenshot(214).png" class="card-img-top" alt="E-commerce Website">
+          <img src="porto/img_tampomas/Screenshot(214).png" class="card-img-top" alt="Tampomas Website">
           <div class="card-body text-center d-flex flex-column">
             <h5 class="card-title"> Website Tampomas Coffee</h5>
             <p class="card-text"> Proyek kelompok membuat website untuk UMKM yang menjual bubuk dan biji kopi yang ditanam oleh petani di Sumedang.</p>
@@ -83,7 +83,7 @@
       <!-- Project Card 3 -->
       <div class="col-md-6 col-lg-4">
         <div class="card h-100 shadow-sm">
-          <img src="thumbnail-posyandu.png" class="card-img-top" alt="Other Projects">
+          <img src="thumbnail-posyandu.png" class="card-img-top" alt="Dashboard">
           <div class="card-body text-center d-flex flex-column">
             <h5 class="card-title"> Dashboard Posyandu Desa Sariwangi</h5>
             <p class="card-text"> Dashboard atau Laporan Interaktif untuk data kesehatan SKDN balita di Posyandu Desa Sariwangi </p>
@@ -91,16 +91,246 @@
           </div>
         </div>
       </div>
+      <!-- Project Card 4 -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm">
+          <img src="porto/img_onlinecourse/Screenshot (235).png" class="card-img-top" alt="Other Projects">
+          <div class="card-body text-center d-flex flex-column">
+            <h5 class="card-title"> Website Online Course</h5>
+            <p class="card-text"> Website untuk pendaftaran online course </p>
+            <a href="porto/onlinecourse.html" class="btn btn-outline-primary mt-auto">Lihat Detail</a>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
+  <!-- Certificate Section -->
+  <section class="container my-5">
+    <h2 class="mb-4">Sertifikat</h2>
+
+    <div class="accordion" id="certificateAccordion">
+        <!-- Language -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingLanguage">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLanguage" aria-expanded="false" aria-controls="collapseLanguage">
+                    Language
+                </button>
+            </h2>
+            <div id="collapseLanguage" class="accordion-collapse collapse" aria-labelledby="headingLanguage">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Bahasa Inggris: PTESOL</h6>
+                                <small class="text-muted">Balai Bahasa Universitas Pendidikan Indonesia</small>
+                            </div>
+                            <a href="https://drive.google.com/file/d/1ucsxYLYucvVag4RKjIbUQzZuqxithS4q/view?usp=sharing" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Document & Productivity Tools -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingDoc">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseDoc" aria-expanded="false" aria-controls="collapseDoc">
+                    Document & Productivity Tools
+                </button>
+            </h2>
+            <div id="collapseDoc" class="accordion-collapse collapse" aria-labelledby="headingDoc">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Microsoft Office Specialist: Word 2019 Associate</h6>
+                                <small class="text-muted">Microsoft</small>
+                            </div>
+                            <a href="https://drive.google.com/file/d/1CFqjZqI7q9rbX-ydvsdauOiI2qOYqt7R/view?usp=sharing" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- Programming -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingProg">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseProg" aria-expanded="false" aria-controls="collapseProg">
+                    Programming
+                </button>
+            </h2>
+            <div id="collapseProg" class="accordion-collapse collapse" aria-labelledby="headingProg">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+                        <!-- list -->
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Pemrograman dengan Python</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/1OP8WERV8XQK" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Pemrograman dengan Dart</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/1OP825QD1PQK" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Dasar Pemrograman Web</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/L4PQ1W8W7XO1" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Data -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingData">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseData" aria-expanded="false" aria-controls="collapseData">
+                    Data
+                </button>
+            </h2>
+            <div id="collapseData" class="accordion-collapse collapse" aria-labelledby="headingData">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Dasar Structured Query Language (SQL)</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/EYX4VM166ZDL" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Dasar Visualisasi Data</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/GRX5OYEJYP0M" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Oracle Data Platform 2025 Certified Foundations Associate</h6>
+                                <small class="text-muted">Oracle</small>
+                            </div>
+                            <a href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=E3673C8E166364D55D8BD64471CD232066452D4176B284A2B57B454067E263EB" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Artificial Intelligence -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingAI">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAI" aria-expanded="false" aria-controls="collapseAI">
+                    Artificial Intelligence
+                </button>
+            </h2>
+            <div id="collapseAI" class="accordion-collapse collapse" aria-labelledby="headingAI">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Dasar AI</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/JMZV3LRKNPN9" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">AI Praktis untuk Produktivitas</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/MRZMN926RPYQ" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Network -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingNetwork">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNetwork" aria-expanded="false" aria-controls="collapseNetwork">
+                    Computer Network & Security
+                </button>
+            </h2>
+            <div id="collapseNetwork" class="accordion-collapse collapse" aria-labelledby="headingNetwork">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Networking Basics</h6>
+                                <small class="text-muted">Cisco</small>
+                            </div>
+                            <a href="https://www.credly.com/badges/b49dacae-45ce-4ddf-8620-9002e4a9caa6" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Introduction to Cybersecurity</h6>
+                                <small class="text-muted">Cisco</small>
+                            </div>
+                            <a href="https://www.credly.com/badges/8d4f5799-607c-4bee-be09-00fb31601986" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <!-- Cloud -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingCloud">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCloud" aria-expanded="false" aria-controls="collapseCloud">
+                    Cloud
+                </button>
+            </h2>
+            <div id="collapseCloud" class="accordion-collapse collapse" aria-labelledby="headingCloud">
+                <div class="accordion-body p-0">
+                    <ul class="list-group list-group-flush">
+
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <div>
+                                <h6 class="mb-0 fw-semibold">Dasar Cloud dan Gen AI di AWS</h6>
+                                <small class="text-muted">Dicoding</small>
+                            </div>
+                            <a href="https://www.dicoding.com/certificates/KEXL7ODWWXG2" class="btn btn-outline-primary btn-sm" target="_blank">Lihat</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+        
+
+    </div>
+  </section>
+
+
+
+
   <!-- CV Section -->
-  <section id="cv" class="container my-5 text-center">
+  <!-- <section id="cv" class="container my-5 text-center">
     <h2 class="mb-4">CV</h2>
     <p>
       Lihat CV saya: <a href="https://drive.google.com/file/d/1QCrO3wxw1tF9PkQgpMUu69CCdo5YFrj4/view?usp=sharing" target="_blank" class="btn btn-outline-dark">Download CV</a>.
     </p>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
   <section id="contact" class="container my-5">
