--- a/porto/onlinecourse.html
+++ b/porto/onlinecourse.html
@@ -19,20 +19,18 @@
 
   <!-- description -->
   <section class="container mt-5 pt-5">
-    <h2 class="mb-4 text-center fw-bold">Website Tampomas</h2>
-    <p> Website ini merupakan proyek kelompok dibuat ketika melaksanakan mata kuliah Proyek Konsultasi.
-        Tugas dari mata kuliah ini adalah mencari client yang akan dibantu untuk menyelesaikan permasalahan digital dengan gratis.
-        Tampomas Coffee merupakan sebuah bisnis kecil yang menjual bubuk dan biji kopi yang bersumber langsung dari petani kopi di Sumedang.
-        Website dibuat agar bisnis memiliki branding yang profesional dan memperluas metode penjualan agar pelanggan dapat memesan melalui website.
-        Dalam kelompok, saya mendapat tugas sebagai Back-end Web Developer yang mengembangkan website menggunakan PHP dan membuat database menggunakan MySQL.
+    <h2 class="mb-4 text-center fw-bold">Website Online Course</h2>
+    <p> Website ini merupakan proyek yang dibuat untuk memenuhi tugas kuliah.
+        Website dikembangkan CodeIgniter4 sebagai framework PHP dan Bootstrap sebagai framework Front-end.
+        Arsitektur pemrograman menggunakan Model-View-Controller
     </p>
-    <p> Website memiliki 2 tampilan, yaitu tampilan untuk pelanggan dan tampilan untuk admin.
-        Sisi pelanggan berfungsi untuk melihat info bisnis, katalog produk, dan membuat pesanan.
-        Sisi admin berfungsi untuk mengelola daftar produk dan data pesanan. 
+    <p> Website memiliki 2 tampilan, yaitu tampilan untuk pengguna dan tampilan untuk admin.
+        Sisi pelanggan berfungsi untuk melihat info course, pendaftaran course, dan megirim pesan.
+        Sisi admin berfungsi untuk mengelola daftar course dan melihat pesan yang dikirim user.
     </p>
   </section>
   <!-- showcase customer -->
-  <h3 class="text-center fw-bold">Customer Side</h3>
+  <h3 class="text-center fw-bold">User Side</h3>
   <div id="carouselCustomer" class="shadow-lg container carousel carousel-dark slide my-2">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -45,49 +43,37 @@
     <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="7" aria-label="Slide 8"></button>
     <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="8" aria-label="Slide 9"></button>
     <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="9" aria-label="Slide 10"></button>
-    <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="10" aria-label="Slide 11"></button>
-    <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="11" aria-label="Slide 12"></button>
-    <button type="button" data-bs-target="#carouselCustomer" data-bs-slide-to="12" aria-label="Slide 13"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="img_tampomas/Screenshot(211).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (235).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="img_tampomas/Screenshot(212).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (236).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(213).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (237).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(214).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (238).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(215).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (239).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(216).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (240).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(217).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (241).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(218).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (242).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(219).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (244).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(220).png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(226).png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(227).png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(228).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (245).png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselCustomer" data-bs-slide="prev">
@@ -99,7 +85,6 @@
     <span class="visually-hidden">Next</span>
   </button>
   </div>
-  <p class="text-center">Keterangan: Klik tombol kanan/kiri untuk ke gambar selanjutnya/sebelumnya</p>
 
   <!-- showcase admin -->
    <hr class="my-5 container">
@@ -111,22 +96,26 @@
     <button type="button" data-bs-target="#carouselAdmin" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselAdmin" data-bs-slide-to="3" aria-label="Slide 4"></button>
     <button type="button" data-bs-target="#carouselAdmin" data-bs-slide-to="4" aria-label="Slide 5"></button>
+    <button type="button" data-bs-target="#carouselAdmin" data-bs-slide-to="5" aria-label="Slide 6"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
-      <img src="img_tampomas/Screenshot(221).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (251).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="2000">
-      <img src="img_tampomas/Screenshot(222).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (250).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(223).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (249).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(224).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (248).png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img_tampomas/Screenshot(225).png" class="d-block w-100" alt="...">
+      <img src="img_onlinecourse/Screenshot (247).png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img_onlinecourse/Screenshot (246).png" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselAdmin" data-bs-slide="prev">
@@ -138,7 +127,6 @@
     <span class="visually-hidden">Next</span>
   </button>
   </div>
-  <p class="text-center mb-5">Keterangan: Klik tombol kanan/kiri untuk ke gambar selanjutnya/sebelumnya</p>
 
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
